examples/linkerd-header-based/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: default
  annotations:
    linkerd.io/inject: enabled
spec: {}
