examples/linkerd-header-based/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-service
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: rollouts-demo
---
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-canary-service
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: rollouts-demo
---
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-stable-service
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: rollouts-demo
