examples/linkerd-header-based/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argo-rollouts-http-route
  namespace: default
spec:
  parentRefs:
    - group: "core"
      name: argo-rollouts-service
      kind: Service
      port: 80
  rules:
    - backendRefs:
        - name: argo-rollouts-stable-service
          group: "core"
          port: 80
          kind: Service
        - name: argo-rollouts-canary-service
          group: "core"
          port: 80
          kind: Service
